Clean-up. SImplified. Logging JSOn object.

--- a/demo4/demo4.csproj
+++ b/demo4/demo4.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <UserSecretsId>ec4a4551-c405-4c90-ade2-9b6719cdc813</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
