--- a/demo4/appsettings.json
+++ b/demo4/appsettings.json
@@ -6,7 +6,8 @@
 		}
 	},
 	"MetricServiceSettings": {
-		"TableName": "Metrics"
+		"TableName": "Metrics",
+		"MetricServiceConnection": "Obtained from UserSecrets, Environment, or secure vault"
 	},
 	"AllowedHosts": "*"
 }
