--- a/demo4/demo4.csproj
+++ b/demo4/demo4.csproj
@@ -10,11 +10,17 @@
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.3" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.1.3" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.3" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.Design" Version="1.1.6" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.1.3">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+		</PackageReference>
 		<PackageReference Include="Microsoft.Extensions.SecretManager.Tools" Version="2.0.2" />
 		<PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\MagenicMetrics\MagenicMetrics.csproj" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Migrations\" />
 	</ItemGroup>
 </Project>
