--- a/demoWebApp/Properties/launchSettings.json
+++ b/demoWebApp/Properties/launchSettings.json
@@ -15,13 +15,13 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "demo4": {
+    "demoWebApp": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:5000"
+      "applicationUrl": "http://localhost:5100"
     }
   }
 }
