Added SQL to create Metrics table.

--- a/MagenicMetrics/MagenicMetrics.csproj
+++ b/MagenicMetrics/MagenicMetrics.csproj
@@ -32,4 +32,14 @@
     </Reference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Database\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Database\Create-MetricsTable.sql">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
