--- a/demoWebApp/Properties/launchSettings.json
+++ b/demoWebApp/Properties/launchSettings.json
@@ -21,7 +21,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:5100"
+      "applicationUrl": "https://localhost:5101;http://localhost:5100"
     }
   }
 }
