--- a/demoWebApp/demoWebApp.csproj
+++ b/demoWebApp/demoWebApp.csproj
@@ -10,6 +10,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="BuildBundlerMinifier" Version="2.8.391" />
 		<PackageReference Include="Microsoft.AspNetCore.App" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.3" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.1.3" />
