--- a/demoWebApp/appsettings.json
+++ b/demoWebApp/appsettings.json
@@ -1,13 +1,16 @@
 {
-	"Logging": {
-		"LogLevel": {
-			"Default": "Warning",
-			"MetricMiddleware": "Information"
-		}
-	},
-	"MetricServiceSettings": {
-		"TableName": "Metrics",
-		"MetricServiceConnection": "Obtained from UserSecrets, Environment, or secure vault"
-	},
-	"AllowedHosts": "*"
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=IdentityServer;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Warning",
+      "MetricMiddleware": "Information"
+    }
+  },
+  "MetricServiceSettings": {
+    "TableName": "Metrics",
+    "MetricServiceConnection": "Obtained from UserSecrets, Environment, or secure vault"
+  },
+  "AllowedHosts": "*"
 }
