--- a/sample/demoWebApp/appsettings.json
+++ b/sample/demoWebApp/appsettings.json
@@ -12,5 +12,12 @@
     "TableName": "Metrics",
     "MetricServiceConnection": "Obtained from UserSecrets, Environment, or secure vault"
   },
+  "IdentitySettings": {
+    "UseIdentityServer": false,
+    "IdentityServer": "https://localhost:7001/"
+  },
+  "DefinitionService": {
+    "BaseUrl": "https://localhost:5001/"
+  },
   "AllowedHosts": "*"
 }
