--- a/sample/demoWebApp/demoWebApp.csproj
+++ b/sample/demoWebApp/demoWebApp.csproj
@@ -11,7 +11,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="BuildBundlerMinifier" Version="2.8.391" />
-		<PackageReference Include="Microsoft.AspNetCore.App" />
+		<PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.4" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.3" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.1.3" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.3" />
