Added XML documentation to Swagger.

--- a/sample/demoWebApi/demoWebApi.csproj
+++ b/sample/demoWebApi/demoWebApi.csproj
@@ -36,4 +36,10 @@
     <ProjectReference Include="..\..\src\MagenicMetrics\MagenicMetrics.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="demoWebApi.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
