--- a/src/MagenicMetrics/MagenicMetrics.csproj
+++ b/src/MagenicMetrics/MagenicMetrics.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
@@ -10,11 +10,9 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DocumentationFile>C:\TestDev\demoMetrics\src\MagenicMetrics\MagenicMetrics.xml</DocumentationFile>
-    <CodeAnalysisRuleSet>MagenicMetrics.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <CodeAnalysisRuleSet>MagenicMetrics.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
   <ItemGroup>
