Trying to implement unused code rule set.

--- a/migrations/demoMigrations/demoMigrations.csproj
+++ b/migrations/demoMigrations/demoMigrations.csproj
@@ -5,6 +5,14 @@
     <UserSecretsId>ec4a4551-c405-4c90-ade2-9b6719cdc813</UserSecretsId>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <CodeAnalysisRuleSet />
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <CodeAnalysisRuleSet />
+  </PropertyGroup>
+
   <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
