--- a/sample/demoWebApi/demoWebApi.csproj
+++ b/sample/demoWebApi/demoWebApi.csproj
@@ -7,7 +7,12 @@
 
   	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
 	  <DocumentationFile>C:\TestDev\demoMetrics\sample\demoWebApi\demoWebApi.xml</DocumentationFile>
+	  <CodeAnalysisRuleSet />
 	</PropertyGroup>
+
+  	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+  	  <CodeAnalysisRuleSet />
+  	</PropertyGroup>
 
   <ItemGroup>
     <Folder Include="wwwroot\" />
