--- a/sample/demoWebApp/demoWebApp.csproj
+++ b/sample/demoWebApp/demoWebApp.csproj
@@ -7,9 +7,11 @@
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
 	  <DocumentationFile>C:\TestDev\demoMetrics\sample\demoWebApp\demoWebApp.xml</DocumentationFile>
+	  <CodeAnalysisRuleSet />
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+	  <CodeAnalysisRuleSet />
 	</PropertyGroup>
 
 	<ItemGroup>
