Fixed MD generation error.

--- a/src/MagenicMetrics/MagenicMetrics.csproj
+++ b/src/MagenicMetrics/MagenicMetrics.csproj
@@ -13,7 +13,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\TestDev\demoMetrics\src\MagenicMetrics\MagenicMetrics.xml</DocumentationFile>
+    <DocumentationFile>C:\MagenicDev\aspnet-core-metrics\src\MagenicMetrics\MagenicMetrics.xml</DocumentationFile>
     <CodeAnalysisRuleSet>..\..\UnusedCode.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
