--- a/sample/demoWebApi/demoWebApi.csproj
+++ b/sample/demoWebApi/demoWebApi.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-	  <DocumentationFile>C:\TestDev\demoMetrics\sample\demoWebApi\demoWebApi.xml</DocumentationFile>
+	  <DocumentationFile>C:\MagenicDev\aspnet-core-metrics\sample\demoWebApi\demoWebApi.xml</DocumentationFile>
 	  <CodeAnalysisRuleSet />
 	</PropertyGroup>
 
