--- a/sample/demoWebApp/demoWebApp.csproj
+++ b/sample/demoWebApp/demoWebApp.csproj
@@ -6,7 +6,7 @@
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-	  <DocumentationFile>C:\TestDev\demoMetrics\sample\demoWebApp\demoWebApp.xml</DocumentationFile>
+	  <DocumentationFile>C:\MagenicDev\aspnet-core-metrics\sample\demoWebApp\demoWebApp.xml</DocumentationFile>
 	  <CodeAnalysisRuleSet />
 	</PropertyGroup>
 
