--- a/demoWebReact/appsettings.json
+++ b/demoWebReact/appsettings.json
@@ -4,5 +4,16 @@
       "Default": "Warning"
     }
   },
+  "MetricServiceSettings": {
+    "TableName": "Metrics",
+    "MetricServiceConnection": "Obtained from UserSecrets, Environment, or secure vault"
+  },
+  "IdentitySettings": {
+    "UseIdentityServer": false,
+    "IdentityServer": "https://localhost:7001/"
+  },
+  "DefinitionService": {
+    "BaseUrl": "https://localhost:5001/"
+  },
   "AllowedHosts": "*"
 }
