--- a/demoWebReact/demoWebReact.csproj
+++ b/demoWebReact/demoWebReact.csproj
@@ -30,6 +30,7 @@
     <None Remove="ClientApp\src\App.tsx" />
     <None Remove="ClientApp\src\components\AddDefinition.tsx" />
     <None Remove="ClientApp\src\components\FetchDefinition.tsx" />
+    <None Remove="ClientApp\src\components\FetchMetrics.tsx" />
     <None Remove="ClientApp\src\components\Home.tsx" />
     <None Remove="ClientApp\src\components\Layout.tsx" />
     <None Remove="ClientApp\src\components\NavMenu.tsx" />
@@ -41,6 +42,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <TypeScriptCompile Include="ClientApp\src\components\FetchMetrics.tsx" />
     <TypeScriptCompile Include="ClientApp\src\components\Home.tsx" />
     <TypeScriptCompile Include="ClientApp\src\components\Layout.tsx" />
     <TypeScriptCompile Include="ClientApp\src\App.tsx" />
