Added dynamic URL for definitions service (demoWebApi) to demoWebApp and demoWebReact.

--- a/sample/demoWebApp/appsettings.json
+++ b/sample/demoWebApp/appsettings.json
@@ -16,8 +16,8 @@
     "UseIdentityServer": false,
     "IdentityServer": "https://localhost:7001/"
   },
-  "DefinitionService": {
-    "BaseUrl": "https://localhost:5001/"
+  "DefinitionServiceSettings": {
+    "BaseUrl": "https://localhost:5001/api/values"
   },
   "AllowedHosts": "*"
 }
