--- a/demoWebReact/appsettings.json
+++ b/demoWebReact/appsettings.json
@@ -12,8 +12,8 @@
     "UseIdentityServer": false,
     "IdentityServer": "https://localhost:7001/"
   },
-  "DefinitionService": {
-    "BaseUrl": "https://localhost:5001/"
+  "DefinitionServiceSettings": {
+    "BaseUrl": "https://localhost:5001/api/values"
   },
   "AllowedHosts": "*"
 }
