Removed extraneous "/" from URL.

--- a/sample/demoWebApp/appsettings.json
+++ b/sample/demoWebApp/appsettings.json
@@ -14,7 +14,7 @@
   },
   "IdentitySettings": {
     "UseIdentityServer": false,
-    "IdentityServer": "https://localhost:7001/"
+    "IdentityServer": "https://localhost:7001"
   },
   "DefinitionServiceSettings": {
     "BaseUrl": "https://localhost:5001/api/values"
