--- a/demoWebReact/appsettings.json
+++ b/demoWebReact/appsettings.json
@@ -10,7 +10,7 @@
   },
   "IdentitySettings": {
     "UseIdentityServer": false,
-    "IdentityServer": "https://localhost:7001/"
+    "IdentityServer": "https://localhost:7001"
   },
   "DefinitionServiceSettings": {
     "BaseUrl": "https://localhost:5001/api/values"
