Added Metric to identify Server. Made demoWebApp Index page accessible without login.

--- a/sample/IdentityServer/IdentityServer.csproj
+++ b/sample/IdentityServer/IdentityServer.csproj
@@ -22,4 +22,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.4" PrivateAssets="All" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\MagenicMetrics\MagenicMetrics.csproj" />
+  </ItemGroup>
+
 </Project>
