--- a/sample/IdentityServer/appsettings.json
+++ b/sample/IdentityServer/appsettings.json
@@ -7,5 +7,9 @@
       "Default": "Warning"
     }
   },
+  "MetricServiceSettings": {
+    "TableName": "Metrics",
+    "MetricServiceConnection": "Obtained from UserSecrets, Environment, or secure vault"
+  },
   "AllowedHosts": "*"
 }
