Auto-generate TypeScript classes from C# classes. Use generated classes in React code.

--- a/demoWebReact/demoWebReact.csproj
+++ b/demoWebReact/demoWebReact.csproj
@@ -83,6 +83,21 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="ClientApp\src\models\AuthenticationModel.ts">
+      <CustomToolNamespace>Models\AuthenticationModel.cs</CustomToolNamespace>
+    </None>
+    <None Update="ClientApp\src\models\DefinitionModel.ts">
+      <CustomToolNamespace>Models\DefinitionModel.cs</CustomToolNamespace>
+    </None>
+    <None Update="ClientApp\src\models\Error.cshtml.ts">
+      <CustomToolNamespace>Pages\Error.cshtml.cs</CustomToolNamespace>
+    </None>
+    <None Update="ClientApp\src\models\MetricsQueryModel.ts">
+      <CustomToolNamespace>Models\MetricsQueryModel.cs</CustomToolNamespace>
+    </None>
+  </ItemGroup>
+
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
     <Exec Command="node --version" ContinueOnError="true">
